--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ typings/
 
 # Dev env
 /config/
-!/config/PROJECT-NAME.dev.json
+!/config/login.dfe.applications.dev.json
 
 .idea/workspace.xml
 .idea/watcherTasks.xml
