--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "login.dfe.migration.admin",
+  "name": "login.dfe.applications",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "settings='./config/PROJECT-NAME.dev.json' node src/index.js",
+    "dev": "settings='./config/login.dfe.applications.dev.json' node src/index.js",
     "test": "./node_modules/.bin/jest"
   },
   "engines": {
@@ -12,21 +12,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DFE-Digital/login.dfe.node-boilerplate.git"
+    "url": "git+https://github.com/DFE-Digital/login.dfe.applications.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DFE-Digital/login.dfe.node-boilerplate/issues"
+    "url": "https://github.com/DFE-Digital/login.dfe.applications/issues"
   },
-  "homepage": "https://github.com/DFE-Digital/login.dfe.node-boilerplate#readme",
+  "homepage": "https://github.com/DFE-Digital/login.dfe.applications#readme",
   "dependencies": {
     "body-parser": "^1.18.1",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-ejs-layouts": "^2.3.1",
     "helmet": "^3.9.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "login.dfe.audit.winston-sequelize-transport": "git+https://github.com/DFE-Digital/login.dfe.audit.winston-sequelize-transport.git#v1.0",
     "login.dfe.sanitization": "git+https://github.com/DFE-Digital/login.dfe.sanitization.git#v1.0",
     "morgan": "^1.9.0",
@@ -38,7 +38,7 @@
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
     "jest": "^21.2.1",
-    "jest-cli": "^21.2.1",
+    "jest-cli": "^23.4.1",
     "node-mocks-http": "^1.6.6"
   },
   "jest": {
