--- a/package.json
+++ b/package.json
@@ -22,24 +22,21 @@
   "homepage": "https://github.com/DFE-Digital/login.dfe.applications#readme",
   "dependencies": {
     "body-parser": "^1.18.1",
-    "ejs": "^2.5.7",
     "express": "^4.15.4",
-    "express-ejs-layouts": "^2.3.1",
     "helmet": "^3.9.0",
     "lodash": "^4.17.10",
+    "login.dfe.api.auth": "git+https://github.com/DFE-Digital/login.dfe.api.auth.git#v1.0.0",
     "login.dfe.audit.winston-sequelize-transport": "git+https://github.com/DFE-Digital/login.dfe.audit.winston-sequelize-transport.git#v1.0",
-    "login.dfe.sanitization": "git+https://github.com/DFE-Digital/login.dfe.sanitization.git#v1.0",
-    "morgan": "^1.9.0",
-    "winston": "^2.4.0",
-    "winston-redis": "^1.0.0"
+    "login.dfe.express-error-handling": "git+https://github.com/DFE-Digital/login.dfe.express-error-handling.git#v1.2",
+    "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.4.2",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "^4.4.1",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
     "jest": "^21.2.1",
-    "jest-cli": "^23.4.1",
-    "node-mocks-http": "^1.6.6"
+    "jest-cli": "^23.4.1"
   },
   "jest": {
     "testEnvironment": "node",
