--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "login.dfe.audit.winston-sequelize-transport": "git+https://github.com/DFE-Digital/login.dfe.audit.winston-sequelize-transport.git#v1.0",
     "login.dfe.express-error-handling": "git+https://github.com/DFE-Digital/login.dfe.express-error-handling.git#v1.2",
     "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.4.2",
+    "sequelize": "^4.38.0",
     "winston": "^2.4.0"
   },
   "devDependencies": {
@@ -36,7 +37,8 @@
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
     "jest": "^21.2.1",
-    "jest-cli": "^23.4.1"
+    "jest-cli": "^23.4.1",
+    "sequelize-mock": "^0.10.2"
   },
   "jest": {
     "testEnvironment": "node",
