--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
   "dependencies": {
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
-    "helmet": "^3.9.0",
+    "helmet": "^3.21.2",
     "lodash": "^4.17.15",
-    "login.dfe.api.auth": "git+https://github.com/DFE-Digital/login.dfe.api.auth.git#v1.0.0",
-    "login.dfe.audit.winston-sequelize-transport": "git+https://github.com/DFE-Digital/login.dfe.audit.winston-sequelize-transport.git#v1.0",
+    "login.dfe.api.auth": "git+https://github.com/DFE-Digital/login.dfe.api.auth.git#v2.0.0",
+    "login.dfe.audit.winston-sequelize-transport": "git+https://github.com/DFE-Digital/login.dfe.audit.winston-sequelize-transport.git#v2.10",
     "login.dfe.express-error-handling": "git+https://github.com/DFE-Digital/login.dfe.express-error-handling.git#v1.2",
-    "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.4.5",
-    "sequelize": "^4.38.0",
+    "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.6",
+    "sequelize": "^4.44.3",
     "uuid": "^3.3.2",
-    "winston": "^2.4.0"
+    "winston": "^2.4.3"
   },
   "devDependencies": {
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-plugin-import": "^2.7.0",
-    "jest": "^24.8.0",
-    "jest-cli": "^24.8.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^21.27.2",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
     "sequelize-mock": "^0.10.2"
   },
   "jest": {
