--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.8",
     "sequelize": "^4.44.3",
     "uuid": "^3.3.2",
-    "winston": "^2.4.3"
+    "winston": "^2.4.3",
+    "applicationinsights": "^1.3.1",
+    "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v3.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
