--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/DFE-Digital/login.dfe.applications#readme",
   "dependencies": {
+    "@slack/webhook": "^5.0.3",
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "helmet": "^3.21.2",
@@ -32,7 +33,9 @@
     "uuid": "^3.3.2",
     "winston": "^2.4.3",
     "applicationinsights": "^1.3.1",
-    "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v3.0"
+    "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v3.0",
+    "node-cron": "^2.0.3",
+    "pm2": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
