--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v3.0",
     "node-cron": "^2.0.3",
     "pm2": "^4.5.6",
-    "sequelize": "6.3.3",
-    "tedious": "8.3.0",
+    "sequelize": "^6.3.3",
+    "tedious": "^8.3.0",
     "uuid": "^3.3.2",
     "winston": "^2.4.5"
   },
