--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -6,12 +6,12 @@ resources:
       type: github
       endpoint: DfE-Digital
       name: DFE-Digital/login.dfe.devops
-      ref: feature/DSI-5680
+      ref: main
     - repository: config
       type: github
       endpoint: DfE-Digital
       name: DFE-Digital/login.dfe.config
-      ref: feature/DSI-5680
+      ref: master
 
 trigger:
   branches:
