--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "login.dfe.audit.transporter": "^3.0.0",
     "login.dfe.audit.winston-sequelize-transport": "git+https://github.com/DFE-Digital/login.dfe.audit.winston-sequelize-transport.git#v3.1.0",
     "login.dfe.express-error-handling": "git+https://github.com/DFE-Digital/login.dfe.express-error-handling.git#v3.0.0",
-    "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v3.0.0",
+    "login.dfe.healthcheck": "github:DFE-Digital/login.dfe.healthcheck#v4.0.0",
     "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v5.0.0",
     "node-cron": "^3.0.3",
     "pm2": "^5.3.0",
