--- a/.vsts-ssp-standalone.yml
+++ b/.vsts-ssp-standalone.yml
@@ -9,8 +9,8 @@ resources:
     - repository: config
       type: github
       endpoint: DfE-Digital
-      name: DFE-Digital/login.dfe.config
-      ref: master
+      name: DFE-Digital/login.dfe.dsi-config
+      ref: main
 
 trigger:
   branches:
