--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "express": "^4.17.1",
     "helmet": "^7.1.0",
     "lodash": "^4.17.21",
-    "login.dfe.api.auth": "git+https://github.com/DFE-Digital/login.dfe.api.auth.git#v2.3.0",
-    "login.dfe.audit.transporter": "^3.0.0",
-    "login.dfe.audit.winston-sequelize-transport": "git+https://github.com/DFE-Digital/login.dfe.audit.winston-sequelize-transport.git#v3.1.0",
-    "login.dfe.express-error-handling": "git+https://github.com/DFE-Digital/login.dfe.express-error-handling.git#v3.0.0",
-    "login.dfe.healthcheck": "github:DFE-Digital/login.dfe.healthcheck#v3.0.0",
-    "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v5.0.0",
+    "login.dfe.api.auth": "github:DFE-Digital/login.dfe.api.auth#v2.3.0",
+    "login.dfe.audit.transporter": "^4.0.1",
+    "login.dfe.audit.winston-sequelize-transport": "github:DFE-Digital/login.dfe.audit.winston-sequelize-transport#v3.2.1",
+    "login.dfe.express-error-handling": "github:DFE-Digital/login.dfe.express-error-handling#v3.0.1",
+    "login.dfe.healthcheck": "github:DFE-Digital/login.dfe.healthcheck#v3.0.1",
+    "login.dfe.winston-appinsights": "github:DFE-Digital/login.dfe.winston-appinsights#v5.0.1",
     "node-cron": "^3.0.3",
     "pm2": "^5.3.0",
     "sequelize": "^6.3.3",
