--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -35,7 +35,7 @@ parameters:
 - name: InfrDeploy
   type: boolean
   displayName: 'Infrastrucure Deployment only'
-  default: true
+  default: false
 - name: tran
   type: boolean
   displayName: 'Transformation Deployment'
