--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -90,7 +90,7 @@ variables:
   ${{ else }}:
     value: false
 - name: pr
-  ${{ if and(or(eq(parameters.pr, 'true'), contains(variables['Build.SourceBranch'],'release')), not(contains(variables['Build.SourceVersionMessage'],'Upgrade to version'))) }}:
+  ${{ if or(eq(parameters.pr, 'true'), contains(variables['Build.SourceBranch'],'release')) }}:
     value: true
   ${{ else }}:
     value: false
@@ -137,15 +137,9 @@ stages:
           - stage: Deployment_${{var.key}}_${{location}}
             displayName: "Deployment [${{var.key}}] ${{location}}"
             ${{ if eq(location,'westeurope') }}:
-              ${{ if eq(var.key,'pr') }}:
-                dependsOn: 
-                - scanBuildApp
-                - Deployment_pp_${{location}}
-                condition: and(in(dependencies.scanBuildApp.result, 'Succeeded', 'Skipped'),in(dependencies.Deployment_pp_westeurope.result, 'Succeeded', 'Skipped'))
-              ${{ else }}:
-                dependsOn: 
-                - scanBuildApp
-                condition: in(dependencies.scanBuildApp.result, 'Succeeded', 'Skipped')
+              dependsOn: 
+              - scanBuildApp
+              condition: in(dependencies.scanBuildApp.result, 'Succeeded', 'Skipped')
             ${{ if eq(location,'northeurope') }}:
               ${{ if eq(length(parameters.location), 2) }}:
                 dependsOn: 
@@ -186,3 +180,13 @@ stages:
                 runtimeStack: NODE|18-lts
                 pm2ProcessFileName: process.json
                 gitCheck: ${{parameters.gitCheck}}
+          
+          - ${{ if and(eq(var.key, 'pr'),eq(location, 'westeurope')) }}:
+            - stage: branchPrTag
+              displayName: "GitHub PR & Release Branch Tag"
+              dependsOn: 
+              - Deployment_${{var.key}}_${{location}}
+              jobs:
+              - template:  pipeline/tagCreation.yml@devopsTemplates
+                parameters:
+                  applicationName: ${{variables.applicationFullName}}
