--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "settings='./config/login.dfe.applications.dev.json' node src/index.js",
+    "format": "prettier . --write",
     "test": "jest --coverage"
   },
   "engines": {
@@ -45,6 +46,7 @@
     "eslint-plugin-jest": "^27.6.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "prettier": "^3.4.2",
     "sequelize-mock": "^0.10.2"
   },
   "jest": {
