--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "settings='./config/login.dfe.applications.dev.json' node src/index.js",
     "format": "prettier . --write",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "engines": {
     "node": "18.x.x"
@@ -44,8 +48,10 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jest": "^27.6.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.4.2",
     "sequelize-mock": "^0.10.2"
   },
