--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "scripts": {
     "dev": "settings='./config/login.dfe.applications.dev.json' node src/index.js",
+    "dev:checks": "npm run lint && npm run test",
     "format": "prettier . --write",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:report": "eslint . -f junit -o eslint-results.xml",
     "test": "jest --coverage",
     "prepare": "husky"
   },
@@ -44,10 +48,11 @@
     "winston": "^3.4.0"
   },
   "devDependencies": {
-    "eslint": "^8.53.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-jest": "^27.6.0",
+    "@eslint/js": "^9.16.0",
+    "eslint": "^9.16.0",
+    "eslint-formatter-junit": "^8.40.0",
+    "eslint-plugin-jest": "^28.9.0",
+    "globals": "^15.13.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
