--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:fix": "eslint . --fix",
     "lint:report": "eslint . -f junit -o eslint-results.xml",
     "test": "jest --coverage",
+    "test:report": "jest --coverage --reporters=default --reporters jest-junit --coverageReporters=clover",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -52,6 +53,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.2",
     "sequelize-mock": "^0.10.2"
