--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sequelize": "^6.37.5",
     "tedious": "^18.6.1",
     "uuid": "^9.0.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
