Revert sequelize version to 6.37.3

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "login.dfe.healthcheck": "^3.0.3",
     "node-cron": "^3.0.3",
     "pm2": "^5.4.3",
-    "sequelize": "^6.37.5",
+    "sequelize": "6.37.3",
     "tedious": "^18.6.1",
     "uuid": "^9.0.1"
   },
