--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "node-cron": "^3.0.3",
     "pm2": "^5.4.3",
     "sequelize": "6.37.3",
-    "tedious": "^18.6.1",
+    "tedious": "18.2.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
