--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,8 @@
       "request": "launch",
       "name": "Launch Applications",
       "skipFiles": ["<node_internals>/**"],
+      "envFile": "${workspaceFolder}/../.env",
       "env": {
-        "settings": "${workspaceFolder}/config/local-config.json",
         "NODE_TLS_REJECT_UNAUTHORIZED": "0"
       },
       "program": "${workspaceFolder}/src/index.js",
